# project-cva

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
machine_learning/collect_data/: filter_data.py  parse_data.py
machine_learning/core/: config.py
machine_learning/utils/: signals_handler.py
ml/collect_data/: parse_github.py
ml/parser/: parse_github.py
